Enviando imagem via endpoint